--- a/TODO
+++ b/TODO
@@ -2,9 +2,9 @@ High Priority:
 
 1) Finish impl. required (and optional) object properies and add them to GUI
 1b) Implement list handling on object creation (e.g. kill-chain-phases, external-references)
-2) Fix broken edit
-3) Lock relationship editing...
-4) Fully implement or purge sortby
+2) Fix broken edit (Partially DONE)
+3) Lock relationship editing... (DONE)
+4) Fully implement or purge sortby (DONE)
 5) Show more object info other than name ; eg show id and/or date on hover or on info section
 
 
@@ -12,7 +12,7 @@ Medium Priority:
 
 1) Impl. kill-chain-phase and external-reference making and ultilize them to GUI
 2) Impl. sightings/markings/observables
-3) Add Bundle Management GUI
+3) Add Bundle Management GUI (DONE, prettify it sigma)
 
 
 Low Priortiy:
