--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ Medium Priority:
 
 1) Impl. kill-chain-phase and external-reference making and ultilize them to GUI
 2) Impl. sightings/markings/observables
-3) Add Bundle Management GUI (DONE, prettify it sigma)
+3) Add Bundle Management GUI (DONE)
 
 
 Low Priortiy:
