--- a/TODO
+++ b/TODO
@@ -1,17 +1,10 @@
 High Priority:
 
-
-1) Show more object info other than name ; eg show id and/or date on hover or on info section
-1b) Add tooltips for property info (e.g. published is a timestamp, labels is an array split with whitespace, etc)
-
+1.   Finish with Data Markings (markdefs,object_marking_refs,granular)
+2.   Implement Sightings
+3.   Implement Sightings
 
 Medium Priority:
 
 1) Implement observables
-2) Implement markings
-
-
-
-Low Priortiy:
-1) Add more tooltips, hovertips on editor etc, handle errors on object creation, improve patterning
 
